<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.air.mover.view.DetallesLineaActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Por si hay que meter algun menu o algo mas, linearlayout -->


        <TextView
            android:id="@+id/tituloParadasLinea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paradas_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/Linea14"
            android:layout_marginTop="12dp" />

    </LinearLayout>

    <android.support.v7.widget.SearchView
        android:id="@+id/searchParadasLinea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.SearchView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listaParadasLinea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
